--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ $.ajax("output.csv")
 		var results = $.parse(data, {
     header: false,
     dynamicTyping: false,
-    preview: 100,
+//    preview: 100,
     step: function(data, file, inputElem) {
         data.results.forEach(function(data){
 					// gender: 0 boy 1 girl
@@ -62,7 +62,7 @@ $.ajax("output.csv")
 					var marker_color = ['blue','red'];
 //12 time
 					var marker = new L.marker([data[15],data[16]], {icon: L.AwesomeMarkers.icon({icon: icons[data[6]], prefix: 'fa', markerColor: marker_color[data[6]]}) }).addTo(map)
-					.bindPopup('<span style="color:' + text_color[data[6]] + '">' + data[5] + '</span> ' + data[2] + '<br>' + data[4] + '<br>' + data[3] + '<br><br>' + timeConverter(data[12]))
+					.bindPopup('Name: <span style="color:' + text_color[data[6]] + '">' + data[5] + '</span><br>Birthday: ' + data[2] + '<br>BeeTalk ID: ' + data[4] + '<br>Status: ' + data[3] + '<br><br>Last Update: ' + timeConverter(data[12]))
 					.openPopup();;
 
 					console.log(data);
