--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 <script src="./awesome-markers/leaflet.awesome-markers.min.js"></script>
-<script src="https://raw.githubusercontent.com/mholt/jquery.parse/master/jquery.parse.min.js"></script>
+<script src="./jquery.parse.min.js"></script>
 </head>
 <body>
 <div class="masthead" style="margin-left: 30px">
