--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <div class="masthead" style="margin-left: 30px">
-<h3 class="muted">BeeTalk Map Demo</h3>
+<h3 class="muted">BeeTalk Map Alpha</h3>
 </div>
 <div class="row-fluid" style="text-align: center">
 	<div id="map" style="width:1000px; height: 700px; margin: 0 auto"></div>
