--- a/index.html
+++ b/index.html
@@ -2,23 +2,39 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>BeeTalk Map Alpha</title>
+<title>BeeHive Alpha</title>
 <link rel="stylesheet" href="http://www.im.ntu.edu.tw/~b102020/imyourangel/css/bootstrap.min.css" type="text/css" />
 <link rel="stylesheet" href="./awesome-markers/leaflet.awesome-markers.css" type="text/css" />
 <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" rel="stylesheet">
 <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
+<style type="text/css">
+  #map {
+		position:absolute;
+		top:0;
+		bottom:0;
+		width:100%;
+	}
+	.logo{
+		position: absolute;
+		top: 20px;
+		left:20px;
+		width: 250px;
+		padding-left: 20px;
+		z-index: 9999;
+		background: white;
+		border-radius: 10px;
+	}
+</style>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 <script src="./awesome-markers/leaflet.awesome-markers.min.js"></script>
 <script src="./jquery.parse.min.js"></script>
 </head>
 <body>
-<div class="masthead" style="margin-left: 30px">
-<h3 class="muted">BeeTalk Map Alpha</h3>
+<div class="logo">
+<h3>BeeHive Alpha</h3>
 </div>
-<div class="row-fluid" style="text-align: center">
-	<div id="map" style="width:1000px; height: 700px; margin: 0 auto"></div>
-</div>
+	<div id="map"></div>
 <script>
 
 function timeConverter(UNIX_timestamp){
@@ -35,7 +51,9 @@ function timeConverter(UNIX_timestamp){
  }
 
 // create a map in the "map" div, set the view to a given place and zoom
-var map = L.map('map').setView([25.0192013,121.5407913], 16);
+var map = L.map('map',{ zoomControl: false }).setView([25.0192013,121.5407913], 16);
+// add zoom control to top right, since site logo is on topleft
+new L.Control.Zoom({ position: 'topright' }).addTo(map);
 
 // add an OpenStreetMap tile layer
 L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
