--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		width: 250px;
 		padding-left: 20px;
 		z-index: 9999;
-		background: white;
+		background: #FFCD30;
 		border-radius: 10px;
 	}
 </style>
@@ -32,7 +32,7 @@
 </head>
 <body>
 <div class="logo">
-<h3>BeeHive Alpha</h3>
+<h3><span style="color:white">Bee</span>Hive Alpha</h3>
 </div>
 	<div id="map"></div>
 <script>
