--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		border-radius: 10px;
 	}
 </style>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+<script src="./jquery.min.js"></script>
 <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 <script src="./awesome-markers/leaflet.awesome-markers.min.js"></script>
 <script src="./jquery.parse.min.js"></script>
