--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>BeeHive Alpha</title>
+<title>BeeHive</title>
 <link rel="stylesheet" href="http://www.im.ntu.edu.tw/~b102020/imyourangel/css/bootstrap.min.css" type="text/css" />
 <link rel="stylesheet" href="./awesome-markers/leaflet.awesome-markers.css" type="text/css" />
 <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" rel="stylesheet">
