fix picture issue

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ $.ajax("data.csv")
 					var marker_color = ['blue','red'];
 //12 time
 					var marker = new L.marker([data[15],data[16]], {icon: L.AwesomeMarkers.icon({icon: icons[data[6]], prefix: 'fa', markerColor: marker_color[data[6]]}) }).addTo(map)
-					.bindPopup('<img src="avatar/' + data[7] + '">Name: <span style="color:' + text_color[data[6]] + '">' + data[5] + '</span><br>Birthday: ' + data[2] + '<br>BeeTalk ID: ' + data[4] + '<br>Status: ' + data[3] + '<br><br>Last Update: ' + timeConverter(data[12]));
+					.bindPopup('<img src="http://filestoretw1.beetalkmobile.com:8081/file/' + data[7] + '"><br>Name: <span style="color:' + text_color[data[6]] + '">' + data[5] + '</span><br>Birthday: ' + data[2] + '<br>BeeTalk ID: ' + data[4] + '<br>Status: ' + data[3] + '<br><br>Last Update: ' + timeConverter(data[12]));
 
 					console.log(data);
 				});
