--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		position: absolute;
 		top: 20px;
 		left:20px;
-		width: 250px;
+		width: 160px;
 		padding-left: 20px;
 		z-index: 9999;
 		background: #FFCD30;
@@ -32,7 +32,7 @@
 </head>
 <body>
 <div class="logo">
-<h3><span style="color:white">Bee</span>Hive Alpha</h3>
+<h3><span style="color: white">Bee</span>Hive <span style="color: white; vertical-align: text-bottom; font-size: 0.7em">alpha</span></h3>
 </div>
 	<div id="map"></div>
 <script>
