add limit options at front end

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@ $( document ).ready(function() {
 
   $('#welcome').modal('show');
   $('#load-data-button').click(function () {
-      $.ajax("data.php")
+      $(this).button('loading');
+      $.ajax("data.php?limit=" + $('input[name=load-limit]:checked').val())
         .done(function( data ) {
             // gender: 0 boy 1 girl
             var text_color = ['cornflowerblue','hotpink'];
@@ -89,14 +90,37 @@ $( document ).ready(function() {
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h4 class="modal-title">Welcome</h4>
+        <h4 class="modal-title">歡迎使用 BeeHive</h4>
       </div>
       <div class="modal-body">
-        Welcome to BeeHive
+        請選擇載入資料的筆數：<br>
+        <div class="radio-inline">
+          <label>
+            <input type="radio" name="load-limit" value="100" checked>
+            100
+          </label>
+        </div>
+        <div class="radio-inline">
+          <label>
+            <input type="radio" name="load-limit" value="500">
+            500
+          </label>
+        </div>
+        <div class="radio-inline">
+          <label>
+            <input type="radio" name="load-limit" value="1000">
+            1000
+          </label>
+        </div>
+        <div class="radio-inline">
+          <label>
+            <input type="radio" name="load-limit" value="3000">
+            3000
+          </label>
+        </div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-warning" id="load-data-button">Load Data</button>
+        <button type="button" class="btn btn-warning" data-loading-text="載入中..." id="load-data-button">載入</button>
       </div>
     </div>
   </div>
