Increase the upper limit of limit

--- a/index.html
+++ b/index.html
@@ -118,7 +118,13 @@ $( document ).ready(function() {
             3000
           </label>
         </div>
-      </div>
+        <div class="radio-inline">
+          <label>
+            <input type="radio" name="load-limit" value="15000">
+            15000
+          </label>
+        </div>
+        </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-warning" data-loading-text="載入中..." id="load-data-button">載入</button>
       </div>
